less/sidebar.less
// Sidebar
// --------------------------------------------------

.sidebar-trigger {
    + .container,
    + .container-fluid {
        -webkit-transition: margin-left 0.2s;
        transition: margin-left 0.2s;
    }
}

.sidebar-toggle {
    position: absolute;
    top: 0;
    left: 0;
    height: @navbar-height + 1;
    cursor: pointer;

    margin: 0;
    padding: 17px 20px 17px 0;

    > i {
        font-size: @sidebar-default-toggle-font-size;
        margin: 0 0 0 -5px;
        -webkit-transition: all 0.1s ease-in-out;
        transition: all 0.1s ease-in-out;
    }

    > .fa-sidebar-toggle:before {
        content: @sidebar-default-toggle-fa-icon;
    }

    &:hover {
        > i {
            margin-left: -9px;
        }
    }

    + .navbar-brand > img {
        margin-left: 10px;
    }
}

.sidebar-wrapper {
    position: fixed;
    top: 0;
    overflow: hidden;
    bottom: 0;
    width: @sidebar-wrapper-width;
    cursor: default;

    -webkit-transform: translateX(-@sidebar-wrapper-width);
    transform: translateX(-@sidebar-wrapper-width);

    -webkit-transition: -webkit-transform 0.2s;
    transition: transform 0.2s;

    &.sidebar-open {
        -webkit-transform: translateX(0px);
        transform: translateX(0px);
    }

    .sidebar-scroller {
        position: absolute;
        overflow-x: hidden;
        overflow-y: scroll;
        left: 0;
        right: -18px;
        height: 100%;
        padding-top: @navbar-height + 1;
    }

    .sidebar-menu {
        margin: 0;
        padding: 0;
        overflow-x: hidden;
        list-style: none;
        text-align: left;
        font-size: @font-size-medium;

        ul {
            padding: 0;
            margin: 0;
        }

        li {
            display: block;
        }
    }

    .sidebar-group > span,
    .sidebar-item > a {
        display: block;
        height: 100%;
        padding: 12px 15px;
        text-decoration: none;
    }

    .sidebar-group {
        padding-top: 20px;

        &:first-child {
            padding-top: 0;
        }

        > span {
            font-family: @headings-font-family;
            font-size: @sidebar-default-group-size;
            border-bottom: 1px solid transparent;
        }

        &.sticky-header {
            position: fixed;
            height: auto;
            top: 0;
            left: 0;
            right: 0;
            z-index: 1;
            padding-top: 0;
        }

        + .sidebar-item {
            padding-top: 32px;

            > a {
                border-top: 1px solid transparent;
            }
        }
    }

    .sidebar-item > a {
        cursor: pointer;
    }
}

.sidebar-swipe {
    position : fixed;
    z-index: @zindex-sidebar-wrapper - 1;
    width: 20px;
    left: 0;
    top: 0;
    bottom: 0;

    -moz-user-select: -moz-none;
    user-select: none;
    -ms-touch-action: none;
}

.sidebar-open + .sidebar-swipe,
.sidebar-force-open .sidebar-swipe {
    left: @sidebar-wrapper-width;
}

.sidebar-trigger {
    .sidebar-toggle {
        z-index: @zindex-sidebar-toggle;
    }

    .sidebar-wrapper {
        z-index: @zindex-sidebar-wrapper;
    }
}

.navbar-fixed-top + .sidebar-trigger,
.navbar-fixed-bottom + .sidebar-trigger {
    .sidebar-toggle {
        position: fixed;
        z-index: @zindex-sidebar-toggle-fixed;
    }

    .sidebar-scroller {
        padding-top: inherit;
    }

    .sidebar-wrapper {
        top: @navbar-height + 1;
        z-index: @zindex-sidebar-wrapper-fixed;
    }
}

.navbar-fixed-bottom + .sidebar-trigger {
    .sidebar-toggle {
        top: inherit;
        bottom: 0;
    }

    .sidebar-wrapper {
        top: 0;
        bottom: @navbar-height + 1;
    }
}

.sidebar-wrapper {
    &.sidebar-default {
        color: @sidebar-default-color;
        background-color: @sidebar-default-bg;

        &.sidebar-open,
        &.sidebar-dragging {
            .box-shadow(3px 0 4px rgba(0, 0, 0, 0.18));
        }

        .sidebar-group {
            > span {
                color: @sidebar-default-group-color;
                border-bottom-color: @sidebar-default-border-color;
            }

            &.sticky-header > span {
                background-color: @sidebar-default-bg;
            }

            + .sidebar-item > a {
                border-top-color: @sidebar-default-border-color;
            }
        }

        .sidebar-item > a {
            color: @sidebar-default-link-color;
            background-color: @sidebar-default-link-bg;

            &:hover,
            &:focus {
                color: @sidebar-default-link-hover-color;
                background-color: @sidebar-default-link-hover-bg;
            }

            &.active {
                color: @sidebar-default-link-active-color;
                background-color: @sidebar-default-link-active-bg;
            }
        }
    }

    &.sidebar-inverse {
        color: @sidebar-inverse-color;
        background-color: @sidebar-inverse-bg;

        &.sidebar-open,
        &.sidebar-dragging {
            .box-shadow(3px 0 4px rgba(0, 0, 0, 0.32));
        }

        .sidebar-group {
            > span {
                color: @sidebar-inverse-group-color;
                border-bottom-color: @sidebar-inverse-border-color;
            }

            &.sticky-header > span {
                background-color: @sidebar-inverse-bg;
            }

            + .sidebar-item > a {
                border-top-color: @sidebar-inverse-border-color;
            }
        }

        .sidebar-item > a {
            color: @sidebar-inverse-link-color;
            background-color: @sidebar-inverse-link-bg;

            &:hover,
            &:focus {
                color: @sidebar-inverse-link-hover-color;
                background-color: @sidebar-inverse-link-hover-bg;
            }

            &.active {
                color: @sidebar-inverse-link-active-color;
                background-color: @sidebar-inverse-link-active-bg;
            }
        }
    }
}

.navbar-default + .sidebar-trigger .sidebar-toggle {
    > i {
        color: @sidebar-default-toggle-color;
    }

    &:hover {
        > i {
            color: @sidebar-default-toggle-hover-color;
        }
    }
}

.navbar-inverse + .sidebar-trigger .sidebar-toggle {
    > i {
        color: @sidebar-toggle-inverse-color;
    }

    &:hover {
        > i {
            color: @sidebar-toggle-inverse-hover-color;
        }
    }
}

@media (max-width: @screen-xs-max) {
    .sidebar-wrapper {
        width: 300px;
        -webkit-transform: translateX(-300px);
        transform: translateX(-300px);
    }
    .sidebar-force-open {
        .sidebar-swipe {
            left: 0;
        }
    }

    .sidebar-open + .sidebar-swipe {
        left: 300px;
    }
}

@media (min-width: @screen-md-min) {
    .sidebar-force-open {
        .sidebar-wrapper {
            &.sidebar-open,
            &.sidebar-dragging {
                .box-shadow(none);
            }
        }
    }
}

